--- a/package.json
+++ b/package.json
@@ -53,11 +53,12 @@
     "@types/chai": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^17.0.2",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0",
     "chai": "^4.5.0",
     "dotenv": "^16.4.7",
     "eslint": "^8",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^16.1.0",
+    "eslint-config-airbnb-typescript": "^18",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.25.3",
@@ -115,10 +116,10 @@
       "text",
       "clover"
     ],
-   "collectCoverageFrom": [
-    "src/**/*.{ts,js}",
-    "!src/**/*.d.ts"
-  ],
+    "collectCoverageFrom": [
+      "src/**/*.{ts,js}",
+      "!src/**/*.d.ts"
+    ],
     "coverageThreshold": {
       "global": {
         "branches": 80,
