--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,6 +24,6 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'nppm'
+        cache: 'pnpm'
     - run: pnpm run build
-    - run: npm test
+    - run: pnpm test
