--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,3 +32,6 @@ jobs:
     - run: pnpm install
     - run: pnpm run build
     - run: pnpm test
+      env:
+        DEVNET: ${{ secret.DEVNET }}
+        MAINNET: ${{ secret.MAINNET }}
