--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,7 +8,9 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
+env:
+  DEVNET: ${{ secrets.DEVNET }}
+  MAINNET: ${{ secrets.MAINNET }}
 jobs:
   build:
 
@@ -31,7 +33,5 @@ jobs:
         cache: 'pnpm'
     - run: pnpm install
     - run: pnpm run build
-    - run: pnpm test
-      env:
-        DEVNET: ${{ secrets.DEVNET }}
-        MAINNET: ${{ secrets.MAINNET }}
+    - run: pnpm test:coverage
+
