--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.1",
+    "@semantic-release/npm": "^12.0.1",
     "@solana/buffer-layout": "^4.0.0",
     "@solana/buffer-layout-utils": "^0.2.0",
     "@solana/codecs": "2.0.0",
@@ -68,6 +71,7 @@
     "jest": "^29.7.0",
     "jest-html-reporter": "^3.10.2",
     "jest-junit": "^16.0.0",
+    "semantic-release": "^24.2.0",
     "snake-case": "^3.0.4",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1",
