--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "decifro",
   "description": "Yet another transaction parser for Solana. A tool for arbitrary Solana transactions with IDL/custom parsers",
-  "version": "1.0.0",
+  "version": "1.0.0-rc1",
   "author": "dougEfresh",
   "license": "LGPL-2.1",
   "homepage": "https://github.com/dougEfresh/decifro",
@@ -42,6 +42,44 @@
     "lint:dump": "eslint --print-config ./.eslintrc.json",
     "typedoc": "typdoc"
   },
+ "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "@solana/buffer-layout": "^4.0.0",
+    "@solana/buffer-layout-utils": "^0.2.0",
+    "@solana/codecs": "2.0.0",
+    "@solana/codecs-data-structures": "^2.0.0",
+    "@solana/codecs-strings": "2.0.0",
+    "@solana/spl-token": "^0.4.9",
+    "@solana/spl-type-length-value": "0.2.0",
+    "@solana/web3.js": "^1.95.8",
+    "@types/bn.js": "^5.1.0",
+    "@types/chai": "^5.0.1",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^17.0.2",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0",
+    "chai": "^4.5.0",
+    "dotenv": "^16.4.7",
+    "eslint": "^8",
+    "eslint-config-airbnb-typescript": "^18",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-prettier": "^5.0.0",
+    "jest": "^29.7.0",
+    "jest-html-reporter": "^3.10.2",
+    "jest-junit": "^16.0.0",
+    "snake-case": "^3.0.4",
+    "ts-jest": "^29.2.5",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.1",
+    "tslib": "^2.6.1",
+    "tsx": "^4.19.2",
+    "typedoc": "^0.27.5",
+    "typedoc-plugin-markdown": "^4.3.3",
+    "typescript": ">=5.3.0 < 5.4.0"
+  },
+
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
     "@coral-xyz/spl-token": "^0.30.1",
