--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "decifro",
   "description": "Yet another transaction parser for Solana. A tool for arbitrary Solana transactions with IDL/custom parsers",
-  "version": "1.0.0-rc1",
+  "version": "1.0.0",
   "author": "dougEfresh",
   "license": "LGPL-2.1",
   "homepage": "https://github.com/dougEfresh/decifro",
@@ -69,7 +69,6 @@
     "jest": "^29.7.0",
     "jest-html-reporter": "^3.10.2",
     "jest-junit": "^16.0.0",
-    "snake-case": "^3.0.4",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.1",
