--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "lint:dump": "eslint --print-config ./.eslintrc.json",
     "typedoc": "typdoc"
   },
- "devDependencies": {
+  "devDependencies": {
+    "@changesets/changelog-github": "^0.5.0",
+    "@changesets/cli": "^2.27.11",
     "@jest/globals": "^29.7.0",
     "@solana/buffer-layout": "^4.0.0",
     "@solana/buffer-layout-utils": "^0.2.0",
@@ -78,7 +80,6 @@
     "typedoc-plugin-markdown": "^4.3.3",
     "typescript": ">=5.3.0 < 5.4.0"
   },
-
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
     "@coral-xyz/spl-token": "^0.30.1",
