--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
     "test:coverage": "jest --coverage",
     "test:custom": "jest ./tests/customParser.test.ts",
     "prettify": "prettier --write ./**/*.ts",
-    "lint": "eslint --config .eslintrc \"./{src,tests}/**/*.{js,ts}\"",
-    "lint:fix": "eslint --config .eslintrc \"./{src,tests}/**/*.{js,ts}\" --fix",
+    "lint": "eslint --config .eslintrc \"./src/**/*.{js,ts}\"",
+    "lint:fix": "eslint --config .eslintrc \"./src/**/*.{js,ts}\" --fix",
     "lint:dump": "eslint --print-config ./.eslintrc.json",
-    "typedoc": "typdoc"
+    "typedoc": "typedoc"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
@@ -76,7 +76,7 @@
     "ts-node": "^10.9.1",
     "tslib": "^2.6.1",
     "tsx": "^4.19.2",
-    "typedoc": "^0.27.5",
+    "typedoc": "^0.27.6",
     "typedoc-plugin-markdown": "^4.3.3",
     "typescript": ">=5.3.0 < 5.4.0"
   },
